# home-lab

./: .coverage  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  00-COMPLETE-ANALYSIS-COMMIT-SUMMARY.md  00-COMPLETE-ANALYSIS-INDEX.md  ACTION-PLAN-5MIN.md  ADR0063-DOCUMENTATION-COMPLETE.md  AGENTS.md  ANALYSIS-COMPLETE-SUMMARY.txt  CHANGELOG.md  CHANGES-SUMMARY-ADR-0049-FINAL.md  CLAUDE.md  CLI_IMPORT_FIX.md  COMMIT-READY-SUMMARY.md  COMMIT-SCRIPTS-README.md  COMMIT_COMMANDS.md  COMMIT_MESSAGE.md  COMMIT_MESSAGE_2.txt  COMMIT_MESSAGE_PHASE2_COMPLETE.md  COMMIT_PREPARATION_COMPLETE.md  COMPLETE-TOPOLOGY-ANALYSIS-FINAL.md  COMPLETION_SUMMARY.md  COMPUTE-EXAMPLES-ГОТОВО.md  CONTRIBUTING.md  CORRECTIONS_SUMMARY.md  DATA_ASSETS_BUG_FIX.md  DELL-XPS-EXTERNAL-DISPLAY-NOTES.md  DELL-XPS-SETUP-GUIDE.md  DEVELOPER_SETUP.md  DOCUMENTATION_UPDATE_COMPLETE.md  ENVIRONMENTS-CLARIFICATION-SUMMARY.md  ENVIRONMENTS-CLARIFICATION.md  ENVIRONMENTS-CORRECTED-EXPLANATION.md  ENVIRONMENTS-FINAL-CLARIFICATION.txt  ERRORS-FIXED.md  EXECUTE_COMMIT.md  FILES-INDEX.md  (+131 more)
.claude/: AGENT-ARCHITECT-RULES.md
.codex/: AGENTS.md  config.toml
.github/: CODEOWNERS  copilot-instructions.md
Migrated_and_archived/: MIGRATION-PLAN.md
acceptance-testing/: README.md
adr/: 0000-template.md  0001-power-policy-layer-boundary.md  0002-separate-data-and-power-links-in-l1.md  0003-data-links-naming-and-power-constraints.md  0004-l2-firewall-policy-references-and-validation.md  0005-diagram-generation-determinism-and-binding-visibility.md  0030-l2-network-layer-enhancements.md  (+138 more)
(+3927 files in other folders)
